[build-system]
requires = ["setuptools"]
py-modules = [
  "websocketHandler",
  "commandLineLogic",
  "main",
  "monitoredDomainsFileReader",
  "horizon",
  "domainStreamHandler",
  "websocketConnection"
]
build-backend = "setuptools.build_meta"

[project]
name = "horizon"
version = "1.0"
requires-python = ">=3.0"
dependencies = [
  "websocket-client",
  "rapidfuzz",
  "typer"
]

[project.scripts]
horizon = "horizon.horizon:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

