[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horizon"
version = "1.0"
description = "Monitor a live Certificate Transparency Stream for domain squatting attempts to detect phishing/impersonation of your root domain assets."
readme = "README.md"
requires-python = ">=3.0"
license = "MIT"
authors = [
    { name = "surviveRuins" }
]

dependencies = [
    "websocket-client",
    "rapidfuzz",
    "typer"
]

[project.scripts]
horizon = "horizon:main"

[tool.setuptools]
py-modules = [
    "horizon",
    "commandLineLogic",
    "domainStreamHandler",
    "monitoredDomainsFileReader",
    "websocketConnection",
    "websocketHandler",
    "main"
]
